# doc_appointment_booking_system

./: .env  Cargo.toml  README.md  build.rs  diesel.toml
migrations/2024-08-14-105327_create_patients_table/: up.sql
migrations/2024-08-14-105341_create_doctors_table/: up.sql
migrations/2024-08-14-105400_create_appointments_table/: up.sql
protos/: appointment.proto
src/: main.rs  schema.rs
src/db/: database.rs
