[package]
name = "doc_appointment_booking_system"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
prost = "0.13.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.1"

